fix: 解决在‘--symbol’中不能输入空格的问题；fun: 增加判断是否有‘--symbol’选项的功能

--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
             "font_path": "font/SourceHanSansCN/SourceHanSansCN-Normal.otf",
             "size_pixel": 28,
             "bpp": 4,
+            "range": "32-127",
             "output": "output_font/font_script_gen_test.c",
             "symbols": "lvgl字体自动生成脚本测试"
         },
@@ -20,7 +21,7 @@
             "size_pixel": 30,
             "bpp": 4,
             "output": "output_font/font_script_gen_test2.c",
-            "symbols": "lvgl font auto generator scripttest,"
+            "symbols": "lvgl font auto generator scripttest."
         }
     ]
 }
